gitignore y gitkeep, se suma type module en html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Bienvenido al desafío clase 2</h1>
     <h3>Daniel Blanco</h3>
     <h4>Comisión: 53105</h4>
-    <script src="main.js"></script>
+    <script type="module" src="main.js" type="module"></script>
 </body>
 </html>
